--- a/components/ui/SignupForms/SignupFormTwo/SignupFormTwo.module.css
+++ b/components/ui/SignupForms/SignupFormTwo/SignupFormTwo.module.css
@@ -126,6 +126,7 @@
 
 .buttonGroup {
   display: flex;
+  flex-direction: row-reverse;
   justify-content: center;
   gap: 5px;
   margin-top: 20px;
@@ -233,6 +234,9 @@
   }
 
   .buttonGroup {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     gap: 15px;
     margin-top: 40px;
     width: 100%;
