feat: reafactor code and icons, fetech profile data

--- a/app/profile/components/ProfileDetails/ProfileDetails.module.css
+++ b/app/profile/components/ProfileDetails/ProfileDetails.module.css
@@ -78,7 +78,7 @@
   gap: 5px;
 }
 
-.link-label a {
+.link-label {
   font-size: 18px;
   font-weight: 700;
 }
@@ -125,7 +125,7 @@
   .icon-label {
     font-size: 14px;
   }
-  .link-label a {
+  .link-label {
     font-size: 14px;
   }
   .profileImage {
