--- a/app/signin/page.module.css
+++ b/app/signin/page.module.css
@@ -32,6 +32,12 @@
   margin-bottom: 35px;
 }
 
+.error-container {
+  padding-right: 110px;
+  margin-block: 10px;
+  color: #db4a39;
+}
+
 .inputs {
   display: flex;
   flex-direction: column;
@@ -45,6 +51,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  margin-top: 10px;
   margin-bottom: 23px;
   font-size: 18px;
   padding-right: 110px;
