--- a/app/signin/page.module.css
+++ b/app/signin/page.module.css
@@ -155,6 +155,13 @@
   max-width: 683px;
 }
 
+.spinner {
+  height: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (max-width: 1440px) {
   .formContainer {
     display: flex;
