--- a/app/signin/page.module.css
+++ b/app/signin/page.module.css
@@ -147,7 +147,7 @@
 
 .socialContainer {
   display: flex;
-  justify-self: center;
+  justify-content: center;
   gap: 20px;
 }
 
@@ -236,5 +236,10 @@
   .divider::before,
   .divider::after {
     display: none;
+  }
+  .socialContainer {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
   }
 }
