--- a/app/signin/page.module.css
+++ b/app/signin/page.module.css
@@ -222,7 +222,7 @@
   .buttonContainer {
     display: flex;
     flex-direction: column-reverse;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
     gap: 20px;
   }
