--- a/app/profile/components/ProfileDetails/ProfileDetails.module.css
+++ b/app/profile/components/ProfileDetails/ProfileDetails.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 1072px;
   box-shadow: 0px 1px 10px 1px #00000040;
-  border: 1px solid #783ba2;
+  border: 1px solid var(--primary-color);
   border-radius: 10px;
   color: var(--primary-color);
   display: flex;
