--- a/components/ui/CourseCard/CourseCard.module.css
+++ b/components/ui/CourseCard/CourseCard.module.css
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #ff6542 center center;
+  background: var(--tomato-color) center center;
   border-radius: 10px 10px 0 0;
 }
 
