--- a/components/ui/DiscountHeader/Discount.module.css
+++ b/components/ui/DiscountHeader/Discount.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #462576;
+  background-color: var(--secondary-color);
   padding: 32px;
   text-align: center;
   color: #ffffff;
