--- a/components/ui/FormField/FormField.module.css
+++ b/components/ui/FormField/FormField.module.css
@@ -32,7 +32,7 @@
 }
 
 .formLabel {
-  color: #783ba2;
+  color: var(--primary-color);
   font-size: 16px;
   line-height: 19px;
   font-weight: 500;
@@ -43,7 +43,7 @@
   width: 100%;
   height: 50px;
   padding: 18px 5px;
-  border: 1px solid #783ba2;
+  border: 1px solid var(--primary-color);
   border-radius: 8px;
   font-size: 13px;
   line-height: 16px;
@@ -79,13 +79,13 @@
   width: 100%;
   height: 50px;
   padding: 0 12px;
-  border: 1px solid #783ba2;
+  border: 1px solid var(--primary-color);
   border-radius: 8px;
   font-size: 14px;
   line-height: 17px;
   font-weight: 500;
   background-color: #fff;
-  color: #783ba2;
+  color: var(--primary-color);
   appearance: none;
   direction: rtl;
 }
@@ -109,7 +109,7 @@
   top: 50%;
   left: 18px;
   transform: translateY(-50%);
-  color: #783ba2;
+  color: var(--primary-color);
 }
 
 .selectInput .divider {
@@ -118,7 +118,7 @@
   left: 50px;
   width: 1px;
   height: 99%;
-  background-color: #783ba2;
+  background-color: var(--primary-color);
   margin: 0 10px;
 }
 
@@ -164,7 +164,7 @@
   }
 
   .formLabel {
-    color: #783ba2;
+    color: var(--primary-color);
     font-size: 20px;
     line-height: 24px;
     font-weight: 500;
@@ -174,7 +174,7 @@
     width: 100%;
     height: 60px;
     padding-right: 20px;
-    border: 1px solid #783ba2;
+    border: 1px solid var(--primary-color);
     border-radius: 8px;
     font-size: 18px;
     line-height: 21px;
@@ -212,7 +212,7 @@
   }
 
   .formLabel {
-    color: #783ba2;
+    color: var(--primary-color);
     font-size: 18px;
     line-height: 21px;
     font-weight: 500;
@@ -222,7 +222,7 @@
     width: 100%;
     height: 60px;
     padding-right: 25px;
-    border: 1px solid #783ba2;
+    border: 1px solid var(--primary-color);
     border-radius: 10px;
     font-size: 18px;
     line-height: 21px;
