--- a/components/ui/ResourceCard/ResourceCard.module.css
+++ b/components/ui/ResourceCard/ResourceCard.module.css
@@ -12,7 +12,7 @@
 }
 
 .iconContainer {
-  background-color: #783ba2;
+  background-color: var(--primary-color);
   border-radius: 50%;
   width: 120px;
   min-height: 114px;
