--- a/sections/Home/QuizzSection/QuizzSection.module.css
+++ b/sections/Home/QuizzSection/QuizzSection.module.css
@@ -2,7 +2,11 @@
 .container {
   display: flex;
   justify-content: center;
-  background: linear-gradient(270.06deg, #783ba2 0.05%, #462576 76.2%);
+  background: linear-gradient(
+    270.06deg,
+    var(--primary-color) 0.05%,
+    var(--secondary-color) 76.2%
+  );
   color: #ffffff;
   gap: 105px;
   min-height: 740px;
@@ -64,7 +68,7 @@
 
 .image {
   width: 357px;
-  height: 339px;  
+  height: 339px;
   border: 3px solid white;
 }
 
